--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,11 @@
 	<version>2.9.9</version>
 </dependency>
 
+	<!--<dependency>-->
+		<!--<groupId>org.springframework.boot</groupId>-->
+		<!--<artifactId>spring-boot-starter-security</artifactId>-->
+	<!--</dependency>-->
+
 </dependencies>
 
 <build>
