--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,9 @@
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/tickets?characterEncoding=utf8&useSSL=true
+spring.datasource.url=jdbc:mysql://localhost:3306/tickets?characterEncoding=utf8&useSSL=true&serverTimezone=Asia/Shanghai
+
+
 spring.datasource.hikari.username=root
 spring.datasource.hikari.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
