fix seats chart

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,3 +49,11 @@ server.port=4000
 #    security.enable-csrf=false
 
 #spring.thymeleaf.prefix=classpath:/templates
+
+
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.encoding=UTF-8
+
+#开发时关闭缓存,不然没法看到实时页面
+# Allow Thymeleaf templates to be reloaded at dev time
+spring.thymeleaf.cache=false
