--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,12 @@
 	<version>2.9.9</version>
 </dependency>
 
+	<dependency>
+		<groupId>net.sf.json-lib</groupId>
+		<artifactId>json-lib</artifactId>
+		<version>2.4</version>
+		<classifier>jdk15</classifier>
+	</dependency>
 	<!--<dependency>-->
 		<!--<groupId>org.springframework.boot</groupId>-->
 		<!--<artifactId>spring-boot-starter-security</artifactId>-->
