--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/tickets?characterEncoding=utf8&useSSL=true&serverTimezone=Asia/Shanghai
+spring.datasource.url=jdbc:mysql://localhost:3306/tickets?characterEncoding=UTF-8&useSSL=true&serverTimezone=Asia/Shanghai
 
 
 spring.datasource.hikari.username=root
