--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/tickets?characterEncoding=UTF-
 
 
 spring.datasource.hikari.username=root
-spring.datasource.hikari.password=root
+spring.datasource.hikari.password=xx
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.hikari.auto-commit=true
 spring.datasource.hikari.maximum-pool-size=150
