--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/tickets?characterEncoding=UTF-8&useSSL=true&serverTimezone=Asia/Shanghai
 
+#DEFAULT CHARACTER SET utf8
 
 spring.datasource.hikari.username=root
 spring.datasource.hikari.password=root
