--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,17 @@
 #DEFAULT CHARACTER SET utf8
 
 
+#-场馆
+#info - 主页 信息修改
+#manager - 新计划
+#record - 现场购票
+#检票登记
+#statistics - 数据
+#
+#-经理
+#index 审批开放/编辑申请
+#settlement 结算
+#statistics - 数据
 
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/tickets
@@ -17,7 +28,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/tickets?characterEncoding=UTF-
 
 
 spring.datasource.hikari.username=root
-spring.datasource.hikari.password=xx
+spring.datasource.hikari.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.hikari.auto-commit=true
 spring.datasource.hikari.maximum-pool-size=150
